tests/paczka1/fuzzy1/85343885.err
Error in line 1: IO1ZC2zkyI S463 72,1
Error in line 12: IO1ZC2zkyI A95 96,2
Error in line 15: IO1ZC2zkyI S333 96,6
Error in line 20: YXCCYBCUql S460 97,0
Error in line 28: IO1ZC2zkyI S333 253,3
Error in line 17: 9Mm S460 19,4
Error in line 24: YXCCYBCUql S333 45,9
